syntax = "proto3";

package telemetry.message.event;

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.telemetry.event";

import "telemetry/message/device_added_event.proto";
import "telemetry/message/device_removed_event.proto";
import "telemetry/message/scenario_added_event.proto";
import "telemetry/message/scenario_removed_event.proto";
import "google/protobuf/timestamp.proto";

message HubEvent {
    string hub_id = 1;
    google.protobuf.Timestamp timestamp = 2;
    oneof payload {
        DeviceAddedEvent device_added = 3;
        DeviceRemovedEvent device_removed = 4;
        ScenarioAddedEvent scenario_added = 5;
        ScenarioRemovedEvent scenario_removed = 6;
    }
}