syntax = "proto3";

package telemetry.message.event;

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.telemetry.event";

import "telemetry/message/motion_sensor_event.proto";
import "telemetry/message/temperature_sensor_event.proto";
import "telemetry/message/light_sensor_event.proto";
import "telemetry/message/climate_sensor_event.proto";
import "telemetry/message/switch_sensor_event.proto";
import "google/protobuf/timestamp.proto";

message SensorEvent {
    string id = 1;
    google.protobuf.Timestamp timestamp = 2;
    string hub_id = 3;
    oneof payload {
        MotionSensorEvent motion_sensor_event = 4;
        TemperatureSensorEvent temperature_sensor_event = 5;
        LightSensorEvent light_sensor_event = 6;
        ClimateSensorEvent climate_sensor_event = 7;
        SwitchSensorEvent switch_sensor_event = 8;
    }
}